--- a/agents.ipynb
+++ b/agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "True"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,29 +296,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.agents import AgentExecutor\n",
-    "import ast\n",
     "\n",
     "Supervisor_executor = AgentExecutor(agent = supervisor, tools = [search], verbose = True)\n",
     "\n",
     "def run_query(query) :\n",
     "    response = Supervisor_executor.invoke({\"input\" : query, \"Connected_agents\" : get_connected_nodes(\"Supervisor\"), \"format_instructions\" : format_instructions})\n",
-    "    response = ast.literal_eval(response)\n",
+    "    response = output_parser.parse(response['output'])\n",
+    "    # print(\"START\")\n",
+    "    # print(response['next_agent'].lower())\n",
+    "    # print('END')\n",
     "    while response[\"next_agent\"] != \"None\" :\n",
     "        query = response[\"next_task\"]\n",
-    "        a = locals().get(response[\"next_agent\"])\n",
+    "        a = globals().get((response[\"next_agent\"]).lower())\n",
     "        agent_executor = AgentExecutor(agent=a, tools=tools, verbose=True)\n",
     "        response = agent_executor.invoke({\"input\": query, \"Connected_agents\" : get_connected_nodes(str(a)), \"format_instructions\" : format_instructions, \"current_output\" : response[\"current_output\"]})\n",
+    "        response=output_parser.parse(response['output'])\n",
     "    return response[\"current_output\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -331,8 +334,24 @@
       "\u001b[32;1m\u001b[1;3m```json\n",
       "{\n",
       "\t\"current_output\": \"2\",\n",
-      "\t\"next_agent\": \"Agent1\",\n",
-      "\t\"next_task\": \"Handle basic tasks\"\n",
+      "\t\"next_agent\": \"Agent2\",\n",
+      "\t\"next_task\": \"Perform a basic search to find interesting facts about the number 2.\"\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `tavily_search_results_json` with `{'query': 'interesting facts about the number 2'}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'url': 'https://numeraly.com/about-the-number-2/', 'content': 'Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.'}, {'url': 'https://www.thefactsite.com/number-2-facts/', 'content': \"Today let's take a look at 10 fun facts about the number 2. The number two is the first prime number. There are only eight prime numbers under 20, and two is the only even number. A prime number, by the way, is a number that can only be divided by itself and the number one. The number two is also either the third or fourth number in the ...\"}, {'url': 'https://trivialinx.com/funny/10-fascinating-facts-about-the-number-2/', 'content': \"Today, let's explore 10 interesting facts about the number 2. Contents. The Number 2 is the First Prime Number; ... The number two is prevalent in mythology, particularly in Roman mythology. The founding of Rome is linked to the story of two brothers named Romulus and Remus, who were raised by wolves after being thrown into the Tiber River as ...\"}, {'url': 'https://mysticalnumbers.com/number-2/', 'content': 'Meaning of Number 2. Many say, \"Good things come in pairs\". Two is a lucky number in the Far East. Two symbolizes partnership. Two is the number of balance, but also the number of conflict and opposition. Without the number two, the positive and negative could not exist. Two is also the number of division. The Pythagoreans thought the ...'}, {'url': 'https://kids.kiddle.co/2_(number)', 'content': 'Two is the framework of the binary system used in computers. The binary way is the simplest system of numbers in which natural numbers (0-9) can be written. Two also has the unique property that 2+2 = 2·2 = 2 2 and 2! + 2 = 2 2. Powers of two are important to computer science. The square root of two was the first known irrational number ...'}]\u001b[0m\u001b[32;1m\u001b[1;3m```json\n",
+      "{\n",
+      "\t\"current_output\": \"Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.\",\n",
+      "\t\"next_agent\": \"None\",\n",
+      "\t\"next_task\": \"None\"\n",
       "}\n",
       "```\u001b[0m\n",
       "\n",
@@ -340,21 +359,14 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "malformed node or string: {'input': 'what is 1+1 ? ', 'Connected_agents': [{'Name': 'Agent2', 'Desc': 'Agent doing basic tasks'}, {'Name': 'Agent1', 'Desc': 'Agent to do basic tasks'}], 'format_instructions': 'The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\\n\\n```json\\n{\\n\\t\"current_output\": string  // Output from the current agent that will be passed to the next agent. If there is no next agent, put None\\n\\t\"next_agent\": string  // The next agent to handle the request.\\n\\t\"next_task\": string  // The task or action for the next agent.\\n}\\n```', 'output': '```json\\n{\\n\\t\"current_output\": \"2\",\\n\\t\"next_agent\": \"Agent1\",\\n\\t\"next_task\": \"Handle basic tasks\"\\n}\\n```'}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[103], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mrun_query\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwhat is 1+1 ? \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[102], line 8\u001b[0m, in \u001b[0;36mrun_query\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_query\u001b[39m(query) :\n\u001b[1;32m      7\u001b[0m     response \u001b[38;5;241m=\u001b[39m Supervisor_executor\u001b[38;5;241m.\u001b[39minvoke({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput\u001b[39m\u001b[38;5;124m\"\u001b[39m : query, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConnected_agents\u001b[39m\u001b[38;5;124m\"\u001b[39m : get_connected_nodes(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSupervisor\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mformat_instructions\u001b[39m\u001b[38;5;124m\"\u001b[39m : format_instructions})\n\u001b[0;32m----> 8\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mast\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mliteral_eval\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnext_agent\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m :\n\u001b[1;32m     10\u001b[0m         query \u001b[38;5;241m=\u001b[39m response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnext_task\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.12/3.12.4/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ast.py:112\u001b[0m, in \u001b[0;36mliteral_eval\u001b[0;34m(node_or_string)\u001b[0m\n\u001b[1;32m    110\u001b[0m                 \u001b[38;5;28;01mreturn\u001b[39;00m left \u001b[38;5;241m-\u001b[39m right\n\u001b[1;32m    111\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _convert_signed_num(node)\n\u001b[0;32m--> 112\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_convert\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode_or_string\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.12/3.12.4/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ast.py:111\u001b[0m, in \u001b[0;36mliteral_eval.<locals>._convert\u001b[0;34m(node)\u001b[0m\n\u001b[1;32m    109\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    110\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m left \u001b[38;5;241m-\u001b[39m right\n\u001b[0;32m--> 111\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_convert_signed_num\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.12/3.12.4/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ast.py:85\u001b[0m, in \u001b[0;36mliteral_eval.<locals>._convert_signed_num\u001b[0;34m(node)\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     84\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m-\u001b[39m operand\n\u001b[0;32m---> 85\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_convert_num\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.12/3.12.4/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ast.py:76\u001b[0m, in \u001b[0;36mliteral_eval.<locals>._convert_num\u001b[0;34m(node)\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_convert_num\u001b[39m(node):\n\u001b[1;32m     75\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(node, Constant) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(node\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mfloat\u001b[39m, \u001b[38;5;28mcomplex\u001b[39m):\n\u001b[0;32m---> 76\u001b[0m         \u001b[43m_raise_malformed_node\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m node\u001b[38;5;241m.\u001b[39mvalue\n",
-      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.12/3.12.4/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ast.py:73\u001b[0m, in \u001b[0;36mliteral_eval.<locals>._raise_malformed_node\u001b[0;34m(node)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m lno \u001b[38;5;241m:=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(node, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlineno\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m     72\u001b[0m     msg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m on line \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlno\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 73\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: malformed node or string: {'input': 'what is 1+1 ? ', 'Connected_agents': [{'Name': 'Agent2', 'Desc': 'Agent doing basic tasks'}, {'Name': 'Agent1', 'Desc': 'Agent to do basic tasks'}], 'format_instructions': 'The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\\n\\n```json\\n{\\n\\t\"current_output\": string  // Output from the current agent that will be passed to the next agent. If there is no next agent, put None\\n\\t\"next_agent\": string  // The next agent to handle the request.\\n\\t\"next_task\": string  // The task or action for the next agent.\\n}\\n```', 'output': '```json\\n{\\n\\t\"current_output\": \"2\",\\n\\t\"next_agent\": \"Agent1\",\\n\\t\"next_task\": \"Handle basic tasks\"\\n}\\n```'}"
-     ]
+     "data": {
+      "text/plain": [
+       "'Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.'"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
