Incorrect output handled

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "True"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,8 +121,8 @@
     "            \"\"\"You are a highly skilled assistant designed to search and answer user's general queries\n",
     "            Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents}\\n\n",
-    "               Format Instructions : {format_instructions}\\n\n",
-    "               Previous Context : {current_output}\"\"\"\n",
+    "               Previous Context : {current_output} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
     "\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
@@ -136,14 +136,11 @@
     "    [\n",
     "        (\n",
     "            \"system\",\n",
-    "            \"\"\"You are a friendly AI that greets people warmly when they start a conversation and says goodbye appropriately when they mention leaving. \n",
-    "\n",
-    "                If someone says something about going away, respond with a proper goodbye.\n",
-    "                If they just greet you or talk normally, respond with a friendly greeting.\n",
+    "            \"\"\"You are a friendly AI assistant with a warm and polite tone.\n",
     "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents} \\n\n",
-    "               Format Instructions : {format_instructions}\\n\n",
-    "               Previous Context : {current_output}\"\"\"\n",
+    "               Previous Context : {current_output} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -159,8 +156,8 @@
     "            \"\"\"You are a highly skilled assistant with expertise in solving math problems. Ensure accurate calculations and provide clear explanations for mathematical concepts. Use the tavily_search_results_json tool for additional information if needed.\n",
     "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents} \\n\n",
-    "               Format Instructions : {format_instructions}\\n\n",
-    "               Previous Context : {current_output}\"\"\"\n",
+    "               Previous Context : {current_output} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -176,8 +173,8 @@
     "            \"\"\"You are an AI assistant with access to powerful tools for calculations. Use these calculation tools when you need to perform precise calculations. \n",
     "               Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents} \\n\n",
-    "               Format Instructions : {format_instructions}\\n\n",
-    "               Previous Context : {current_output}\"\"\"\n",
+    "               Previous Context : {current_output} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -203,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,16 +257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent21 = create_tool_calling_agent(llm, tools=tools, prompt= greeting_prompt)"
+    "agent21 = create_tool_calling_agent(llm, tools, greeting_prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,21 +304,19 @@
     "def run_query(query) :\n",
     "    response = Supervisor_executor.invoke({\"input\" : query, \"Connected_agents\" : get_connected_nodes(\"Supervisor\"), \"format_instructions\" : format_instructions})\n",
     "    response = output_parser.parse(response['output'])\n",
-    "    # print(\"START\")\n",
-    "    # print(response['next_agent'].lower())\n",
-    "    # print('END')\n",
     "    while response[\"next_agent\"] != \"None\" :\n",
     "        query = response[\"next_task\"]\n",
-    "        a = globals().get((response[\"next_agent\"]).lower())\n",
+    "        next_agent=response[\"next_agent\"]\n",
+    "        a = globals().get(next_agent.lower())\n",
     "        agent_executor = AgentExecutor(agent=a, tools=tools, verbose=True)\n",
-    "        response = agent_executor.invoke({\"input\": query, \"Connected_agents\" : get_connected_nodes(str(a)), \"format_instructions\" : format_instructions, \"current_output\" : response[\"current_output\"]})\n",
+    "        response = agent_executor.invoke({\"input\": query, \"Connected_agents\" : get_connected_nodes(next_agent), \"format_instructions\" : format_instructions, \"current_output\" : response[\"current_output\"]})\n",
     "        response=output_parser.parse(response['output'])\n",
     "    return response[\"current_output\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +330,7 @@
       "{\n",
       "\t\"current_output\": \"2\",\n",
       "\t\"next_agent\": \"Agent2\",\n",
-      "\t\"next_task\": \"Perform a basic search to find interesting facts about the number 2.\"\n",
+      "\t\"next_task\": \"Search for fun facts about the number 2\"\n",
       "}\n",
       "```\u001b[0m\n",
       "\n",
@@ -344,14 +339,38 @@
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `tavily_search_results_json` with `{'query': 'interesting facts about the number 2'}`\n",
+      "Invoking: `tavily_search_results_json` with `{'query': 'fun facts about the number 2'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'url': 'https://numeraly.com/about-the-number-2/', 'content': 'Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.'}, {'url': 'https://www.thefactsite.com/number-2-facts/', 'content': \"Today let's take a look at 10 fun facts about the number 2. The number two is the first prime number. There are only eight prime numbers under 20, and two is the only even number. A prime number, by the way, is a number that can only be divided by itself and the number one. The number two is also either the third or fourth number in the ...\"}, {'url': 'https://trivialinx.com/funny/10-fascinating-facts-about-the-number-2/', 'content': \"Today, let's explore 10 interesting facts about the number 2. Contents. The Number 2 is the First Prime Number; ... The number two is prevalent in mythology, particularly in Roman mythology. The founding of Rome is linked to the story of two brothers named Romulus and Remus, who were raised by wolves after being thrown into the Tiber River as ...\"}, {'url': 'https://mysticalnumbers.com/number-2/', 'content': 'Meaning of Number 2. Many say, \"Good things come in pairs\". Two is a lucky number in the Far East. Two symbolizes partnership. Two is the number of balance, but also the number of conflict and opposition. Without the number two, the positive and negative could not exist. Two is also the number of division. The Pythagoreans thought the ...'}, {'url': 'https://kids.kiddle.co/2_(number)', 'content': 'Two is the framework of the binary system used in computers. The binary way is the simplest system of numbers in which natural numbers (0-9) can be written. Two also has the unique property that 2+2 = 2·2 = 2 2 and 2! + 2 = 2 2. Powers of two are important to computer science. The square root of two was the first known irrational number ...'}]\u001b[0m\u001b[32;1m\u001b[1;3m```json\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'url': 'https://numeraly.com/about-the-number-2/', 'content': 'Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.'}, {'url': 'https://www.thefactsite.com/number-2-facts/', 'content': \"Today let's take a look at 10 fun facts about the number 2. The number two is the first prime number. There are only eight prime numbers under 20, and two is the only even number. A prime number, by the way, is a number that can only be divided by itself and the number one. The number two is also either the third or fourth number in the ...\"}, {'url': 'https://trivialinx.com/funny/10-fascinating-facts-about-the-number-2/', 'content': \"Today, let's explore 10 interesting facts about the number 2. Contents. The Number 2 is the First Prime Number; ... The number two is prevalent in mythology, particularly in Roman mythology. The founding of Rome is linked to the story of two brothers named Romulus and Remus, who were raised by wolves after being thrown into the Tiber River as ...\"}, {'url': 'https://mathandmind.com/articles/fun-facts-about-numbers-2-and-3', 'content': 'In fact, two is the only even prime number since it has only two positive divisors that 2 and 1! Therefore, the number \"2\" is usually called \"the oddest prime.\". Two is considered lucky in China. The Chinese people say \"good things come in pairs.\" However, when adding two and two, you get four that is believed to be extremely unlucky in ...'}, {'url': 'https://mysticalnumbers.com/number-2/', 'content': 'Meaning of Number 2. Many say, \"Good things come in pairs\". Two is a lucky number in the Far East. Two symbolizes partnership. Two is the number of balance, but also the number of conflict and opposition. Without the number two, the positive and negative could not exist. Two is also the number of division. The Pythagoreans thought the ...'}]\u001b[0m\u001b[32;1m\u001b[1;3m```json\n",
       "{\n",
       "\t\"current_output\": \"Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.\",\n",
+      "\t\"next_agent\": \"Agent21\",\n",
+      "\t\"next_task\": \"An Agent for saying goodbye to the user and ensuring a smooth transition to the conclusion\"\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m```json\n",
+      "{\n",
+      "\t\"current_output\": \"Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.\",\n",
+      "\t\"next_agent\": \"Agent2\",\n",
+      "\t\"next_task\": \"Say goodbye to the user and ensure a smooth transition to the conclusion.\"\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m```json\n",
+      "{\n",
+      "\t\"current_output\": \"Goodbye! Thank you for exploring the fun and interesting facts about the number 2 with me. Have a great day!\",\n",
       "\t\"next_agent\": \"None\",\n",
-      "\t\"next_task\": \"None\"\n",
+      "\t\"next_task\": \"Conclusion\"\n",
       "}\n",
       "```\u001b[0m\n",
       "\n",
@@ -361,16 +380,16 @@
     {
      "data": {
       "text/plain": [
-       "'Fun and interesting facts about the number 2. The number 2 holds a unique position in the world of mathematics, as it is the only even prime number. This means that it is the smallest and the first even number that can only be divided by 1 and itself. Furthermore, the number 2 has a significant presence in various aspects of our lives.'"
+       "'Goodbye! Thank you for exploring the fun and interesting facts about the number 2 with me. Have a great day!'"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "run_query(\"what is 1+1 ? \")"
+    "run_query(\"what is 1+1? \")"
    ]
   }
  ],
